# natstat-py

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
src/natstat/: __init__.py  api.py  config.py  log.py  paginated.py  util.py
src/natstat/models/: game_type.py  games.py  leaguecodes.py  moneyline.py  natstat_req.py  natstat_resp.py  overunder.py  playbyplay.py  playerperfs.py  players.py  pointspread.py  seasons.py  stats.py  team.py  teamcodes.py  teamperfs.py  teams.py  venues.py
src/natstat_py/: __init__.py
tests/: test_examples.py
